# RABL

./: .gitignore  Message.js  README.md  login.js  main.js  package-lock.json  package.json
Scripts/: Message.js  friends.js
Views/: directMessage.html  friends.html  login.html  main.html  room.html  server.html
assets/css/: login.css
assets/css/assets/fonts/: fonts.css
lib/: index.js
native/: Cargo.toml
native/src/: client_core.rs  lib.rs
scripts/: directMessage.js  friends.js  login.js  logout.js  message.js  serverMessage.js  servers.js  userInfo.js  videoCall.js
usr/: userdat.cbor
